from OpenGL.GL import *
from typing import List

class PostProcessor:
    def __init__(self, width: int, height: int):
        self.width = width
        self.height = height
        self.effects: List[PostProcessEffect] = []
        self._setup_framebuffer()
    
    def _setup_framebuffer(self):
        """Initialize post-processing framebuffer"""
        self.fbo = glGenFramebuffers(1)
        self.texture = glGenTextures(1)
        
        glBindFramebuffer(GL_FRAMEBUFFER, self.fbo)
        glBindTexture(GL_TEXTURE_2D, self.texture)
        glTexImage2D(GL_TEXTURE_2D, 0, GL_RGB, self.width, self.height, 0, GL_RGB, GL_UNSIGNED_BYTE, None)
        glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR)
        glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_LINEAR)
        glFramebufferTexture2D(GL_FRAMEBUFFER, GL_COLOR_ATTACHMENT0, GL_TEXTURE_2D, self.texture, 0)
    
    def add_effect(self, effect: 'PostProcessEffect'):
        """Add a post-processing effect to the chain"""
        self.effects.append(effect)
    
    def begin(self):
        """Begin post-processing capture"""
        glBindFramebuffer(GL_FRAMEBUFFER, self.fbo)
    
    def end(self):
        """Apply all post-processing effects"""
        glBindFramebuffer(GL_FRAMEBUFFER, 0)
        for effect in self.effects:
            effect.apply(self.texture)
    
    def resize(self, width: int, height: int):
        """Handle window resize"""
        self.width = width
        self.height = height
        self._setup_framebuffer()

class PostProcessEffect:
    def __init__(self):
        self._setup_shader()
    
    def _setup_shader(self):
        """Initialize effect shader"""
        pass
    
    def apply(self, source_texture: int):
        """Apply the effect"""
        pass

class BloomEffect(PostProcessEffect):
    def __init__(self, threshold: float = 1.0, intensity: float = 1.0):
        super().__init__()
        self.threshold = threshold
        self.intensity = intensity
    
    def apply(self, source_texture: int):
        """Apply bloom effect"""
        # Bloom implementation would go here
        pass